--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Jon Lewis Productions</title>
-        <meta name="description" content="">
+        <meta name="description" content="Music Mixing and Productions Services based out of Toronto, Ontario, Canada">
+        <meta name="keywords" content="Audio, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, Studio, Toronto, Contact, Social Media, Twitter, Facebook, Instagram, Email, Phone"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -20,55 +21,47 @@
 
         <div class="container">
 
-      <div class="masthead">
-        <h3 class="muted">Jon Lewis Productions</h3>
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-              <ul class="nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="gear.html">Gear</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div>
+          <div class="masthead">
+            <h3 class="muted">Jon Lewis Productions</h3>
+            <div class="navbar">
+              <div class="navbar-inner">
+                <div class="container">
+                  <ul class="nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li class="active"><a href="contact.html">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div><!-- /.navbar -->
           </div>
-        </div><!-- /.navbar -->
-      </div>
 
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <div class="header-txt">
-            <h1>Music Production, Mixing & Mastering</h1>            
-            <h2>Toronto, Ontario, Canada</h2>
-            <p class="lead">I can bring your music to life with professional quality audio services. Tracking, editing, mixing and mastering services available!</p>
-            <a class="btn btn-large btn-success" href="#">Contact for quotes</a>
+      <!-- Main Content -->
+      <div class="main-content">
+        <div class="header-txt social">
+            <h1>Check me out on social media</h1>            
+            <h2><a href="https://www.facebook.com/JonLewisProductions/" target="_blank">Facebook</a></h2>
+            <h2><a href="https://www.instagram.com/jonlewisproductions/" target="_blank">Instagram</a></h2>
+            <h2><a href="https://twitter.com/jonlewisprods" target="_blank">Twitter</a></h2>
+            <h2><a href="https://soundcloud.com/jonjlewis/" target="_blank">Soundcloud</a></h2>
+            <h2><a href="mailto:jonlewisproductions@gmail.com" target="_blank">Email</a></h2>
+            <h2><a href="https://www.youtube.com/watch?v=PuYPOC-gCGA" target="_blank">Phone: 1-647-946-7230</a></h2>
         </div>
-        <div class="overlay"></div>
-        <img src="img/cubase_home.jpg"/>
       </div>
 
       <hr>
 
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span4">
-          <h2>Gear</h2>
-          <p>List of hardware and software.</p>
-          <p><a class="cta-link" href="#">View details &raquo;</a></p>
+          <div class="span6 cta">
+            <a class="cta-link" href="projects.html"><h2>Portfolio</h2>
+            <p>Previous music production works.</p></a>
+         </div>
+          <div class="span6 cta">
+            <a class="cta-link" href="contact.html"><h2>Contact</h2>
+            <p>Contact for rates and more information.</p></a>
+          </div>
         </div>
-        <div class="span4">
-          <h2>Portfolio</h2>
-          <p>Previous music production works.</p>
-          <p><a class="cta-link" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Contact</h2>
-          <p>Contact for rates and more information.</p>
-          <p><a class="cta-link" href="#">View details &raquo;</a></p>
-        </div>
-      </div>
 
       <hr>
 
@@ -81,13 +74,13 @@
         <script type="text/javascript" src="dest/jlstudios.min.js" charset="utf-8"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-116055111-1');
         </script>
     </body>
 </html>
