--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Jon Lewis Productions</title>
         <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services based in Toronto, Ontario, Canada.">
+        <meta name="keywords" content="Audio, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, Studio, Toronto"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -20,30 +21,28 @@
 
         <div class="container">
 
-      <div class="masthead">
-        <h3 class="muted">Jon Lewis Productions</h3>
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-              <ul class="nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="gear.html">Gear</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div>
+          <div class="masthead">
+            <h3 class="muted">Jon Lewis Productions</h3>
+            <div class="navbar">
+              <div class="navbar-inner">
+                <div class="container">
+                  <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div><!-- /.navbar -->
           </div>
-        </div><!-- /.navbar -->
-      </div>
 
       <!-- Jumbotron -->
       <div class="jumbotron">
         <div class="header-txt">
             <h1>Music Production, Mixing & Mastering</h1>            
             <h2>Toronto, Ontario, Canada</h2>
-            <p class="lead">I can bring your music to life with professional quality audio services. Tracking, editing, mixing and mastering services available!</p>
-            <a class="btn btn-large btn-success" href="mailto:jonlewisproductions@gmail.com">Contact for quotes</a>
+            <p class="lead">Let's bring your music to life with professional quality audio services. Tracking, editing, mixing and mastering services available!</p>
+            <a class="btn btn-large" href="mailto:jonlewisproductions@gmail.com">Contact for quotes</a>
         </div>
         <div class="overlay"></div>
         <img src="img/cubase_home.jpg"/>
@@ -53,20 +52,13 @@
 
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span4">
-          <h2>Gear</h2>
-          <p>List of hardware and software.</p>
-          <p><a class="cta-link" href="gear.html">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Portfolio</h2>
-          <p>Previous music production works.</p>
-          <p><a class="cta-link" href="projects.html">View details &raquo;</a></p>
+        <div class="span6 cta">
+          <a class="cta-link" href="projects.html"><h2>Portfolio</h2>
+          <p>Previous music production works.</p></a>
        </div>
-        <div class="span4">
-          <h2>Contact</h2>
-          <p>Contact for rates and more information.</p>
-          <p><a class="cta-link" href="contact.html">View details &raquo;</a></p>
+        <div class="span6 cta">
+          <a class="cta-link" href="contact.html"><h2>Contact</h2>
+          <p>Contact for rates and more information.</p></a>
         </div>
       </div>
 
@@ -78,16 +70,17 @@
 
     </div> <!-- /container -->
 
-        <script type="text/javascript" src="dest/jlstudios.min.js" charset="utf-8"></script>
+        <script type="text/javascript" src="dest/bundle.js" charset="utf-8"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116055111-1');
+      </script>
     </body>
 </html>
