--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,12 @@
 
         <link href="dest/styles.min.css" rel="stylesheet" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8891819570588202",
+            enable_page_level_ads: true
+          });
+        </script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -53,15 +59,17 @@
 
       <!-- Example row of columns -->
       <div class="row-fluid">
-          <div class="span6 cta">
+          <div class="span12 cta">
             <a class="cta-link" href="projects.html"><h2>Portfolio</h2>
             <p>Previous music production works.</p></a>
-         </div>
-          <div class="span6 cta">
-            <a class="cta-link" href="contact.html"><h2>Contact</h2>
-            <p>Contact for rates and more information.</p></a>
-          </div>
+         </div>          
+      </div>
+
+      <div class="row-fluid">
+        <div class="row-fluid">
+          <a href="https://soundbetter.com/profiles/62886-jon-lewis" target="_blank" title="Jon Lewis profile on SoundBetter" ><img alt="Jon Lewis, Mixing Engineer on SoundBetter" src="https://dkxd2qj9i8fak.cloudfront.net/assets/SoundBetterBadge-c84cb3e75c4267f5bee41f7f617a81d9.svg" style="max-width: 130px;" /></a>
         </div>
+      </div>
 
       <hr>
 
@@ -82,5 +90,6 @@
 
           gtag('config', 'UA-116055111-1');
         </script>
+        
     </body>
 </html>
