--- a/new/index.html
+++ b/new/index.html
@@ -13,12 +13,6 @@
 
         <link href="dest/styles.min.css" rel="stylesheet" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-8891819570588202",
-            enable_page_level_ads: true
-          });
-        </script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -27,15 +21,26 @@
 
         <div class="container">
 
-          <div class="logo masthead">
-            <h3 class="muted">JLP :::: Jon Lewis Productions</h3>
-        </div>
+          <div class="masthead">
+            <h3 class="muted">Jon Lewis Productions</h3>
+            <div class="navbar">
+              <div class="navbar-inner">
+                <div class="container">
+                  <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div><!-- /.navbar -->
+          </div>
 
       <!-- Jumbotron -->
       <div class="jumbotron">
         <div class="header-txt">
-            <h1>First Song FREE!</h1>            
-            <h2>Music Production, Mixing & Mastering :: Toronto, Ontario, Canada</h2>
+            <h1>Music Production, Mixing & Mastering</h1>            
+            <h2>Toronto, Ontario, Canada</h2>
             <p class="lead">Let's bring your music to life with professional quality audio services. Tracking, editing, mixing and mastering services available!</p>
             <a class="btn btn-large" href="mailto:jonlewisproductions@gmail.com">Contact for quotes</a>
         </div>
@@ -43,27 +48,17 @@
         <img src="img/cubase_home.jpg"/>
       </div>
 
+      <hr>
+
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span12 cta">
+        <div class="span6 cta">
           <a class="cta-link" href="projects.html"><h2>Portfolio</h2>
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/466192080&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+          <p>Previous music production works.</p></a>
        </div>
-      </div>
-
-      <div class="row-fluid">
-        <a href="https://soundbetter.com/profiles/62886-jon-lewis" target="_blank" title="Jon Lewis profile on SoundBetter" ><img alt="Jon Lewis, Mixing Engineer on SoundBetter" src="https://dkxd2qj9i8fak.cloudfront.net/assets/SoundBetterBadge-c84cb3e75c4267f5bee41f7f617a81d9.svg" style="max-width: 130px;" /></a>
-      </div>
-
-      <div class="main-content">
-        <div class="header-txt social">
-            <h1>Check me out on social media</h1>            
-            <h2><a href="https://www.facebook.com/JonLewisProductions/" target="_blank">Facebook</a></h2>
-            <h2><a href="https://www.instagram.com/jonlewisproductions/" target="_blank">Instagram</a></h2>
-            <h2><a href="https://twitter.com/jonlewisprods" target="_blank">Twitter</a></h2>
-            <h2><a href="https://soundcloud.com/jonjlewis/" target="_blank">Soundcloud</a></h2>
-            <h2><a href="mailto:jonlewisproductions@gmail.com" target="_blank">Email</a></h2>
-            <h2><a href="https://www.youtube.com/watch?v=PuYPOC-gCGA" target="_blank">Phone: 1-647-946-7230</a></h2>
+        <div class="span6 cta">
+          <a class="cta-link" href="contact.html"><h2>Contact</h2>
+          <p>Contact for rates and more information.</p></a>
         </div>
       </div>
 
@@ -87,7 +82,5 @@
 
         gtag('config', 'UA-116055111-1');
       </script>
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      
     </body>
 </html>
