--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,12 @@
 
         <link href="dest/styles.min.css" rel="stylesheet" media="screen">
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8891819570588202",
+            enable_page_level_ads: true
+          });
+        </script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -37,6 +43,9 @@
           </div>
 
       <!-- Example row of columns -->
+      <div class="row-fluid">
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/466192080&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+      </div>
       <div class="row-fluid">
           <div class="span4">
             <h2>Mixing Projects</h2>
@@ -75,5 +84,6 @@
 
           gtag('config', 'UA-116055111-1');
         </script>
+        
     </body>
 </html>
