--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Jon Lewis Productions</title>
-        <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services based in Toronto, Ontario, Canada.">
-        <meta name="keywords" content="Audio, Editing, Recording, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, JLP Audio, Studio, Toronto, Canada, Ontario, GTA, Markham, Podcasts, Rock, Metal, Punk, Indie, Pop, Country, Folk, Hip Hop, Rap, Producer, Engineer, Mastering"/>
+        <title>JLP Audio: Jon Lewis Productions</title>
+        <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services.">
+        <meta name="keywords" content="Audio, Editing, Recording, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, JLP Audio, Studio, Podcasts, Rock, Metal, Punk, Indie, Pop, Country, Folk, Hip Hop, Rap, Producer, Engineer, Mastering"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="p:domain_verify" content="319476384147f43b0224aab58461eade"/>
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="shortcut icon" type="image/jpg" href="img/Logo/Social Media Logo Files/Favicon/Favicon Logo.png"/>
         <!-- Place favicon.ico in the root directory -->
 
-        <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet"> <!--load all styles -->
+        <link href="node_modules/@fontawesome/fontawesome-free/css/all.min.css" rel="stylesheet"> <!--load all styles -->
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
         <link href="dest/styles.min.css" rel="stylesheet" media="screen">
@@ -21,47 +21,51 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
       <script src="semantic/dist/semantic.min.js"></script>
-        <script>
+        <!-- <script>
           (adsbygoogle = window.adsbygoogle || []).push({
             google_ad_client: "ca-pub-8891819570588202",
             enable_page_level_ads: true
           });
-        </script>
+        </script> -->
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container">
-          <div class="ui text menu">
+        <div class="main-content container">
+          <div id="main-nav" class="ui text menu">
               <div class="header item">Menu</div>
               <a class="active item" href="index.html">
                 Home
               </a>
-              <a class="item" href="portfolio.html">
-                Portfolio
+              <a class="item" href="web.html">
+                Web
               </a>
+              <a class="item" href="portfolio.html">
+                Audio
+              </a>
+              <a class="item" href="video.html">
+                Video
+              </a>
+              <a class="item" href="mailto:jonlewisproductions@gmail.com">Contact</a>
             </div>
-          <div class="logo masthead">
+          <!-- <div class="logo masthead">
             <a href="index.html"><img src="img/Logo/Standard Logo Files/White on Transparent.png"/></a>
-        </div>
+        </div> -->
 
       <!-- Jumbotron -->
       <div class="jumbotron">
+        <div class="banner-img"><img src="img/web-banner.jpg"></div>
         <div class="header-txt">
-            <h2>Audio Production Services :: Toronto, Ontario, Canada</h2>
-            <p class="lead">Professional quality audio services. Recording, editing, mixing and mastering services available!</p>
-            <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for quotes</button>
+            <h2>Digital Services</h2>
+            <p class="lead">Professional quality web, audio and video services.</p>
+            <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for a quote</button>
         </div>
         <div class="overlay"></div>
       </div>
 
       <!-- Example row of columns -->
-
-      <div class="row-fluid">
-        <a href="https://soundbetter.com/profiles/62886-jon-lewis" target="_blank" title="Jon Lewis profile on SoundBetter" ><img alt="Jon Lewis, Mixing Engineer on SoundBetter" src="https://dkxd2qj9i8fak.cloudfront.net/assets/SoundBetterBadge-c84cb3e75c4267f5bee41f7f617a81d9.svg" style="max-width: 130px;" /></a>
-      </div>
 
       <div class="main-content">
         <div class="header-txt social">
@@ -78,6 +82,7 @@
       </div>
 
       <hr>
+      <!-- <iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ez&f=ifr&linkID=e8a873cf1925965342de88dcf222afd3&t=jlproductio0a-20&tracking_id=jlproductio0a-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe> -->
 
       <div class="footer">
         <p>&copy; Jon Lewis Productions <script>document.write(new Date().getFullYear())</script></p>
@@ -89,7 +94,7 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
+      <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -97,7 +102,9 @@
 
         gtag('config', 'UA-116055111-1');
       </script>
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+      <!-- Start of HubSpot Embed Code -->
+      <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8042853.js"></script> -->
+      <!-- End of HubSpot Embed Code -->
     </body>
 </html>
