--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,39 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Jon Lewis Productions</title>
-        <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services based in Toronto, Ontario, Canada.">
-        <meta name="keywords" content="Audio, Editing, Recording, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, JLP Audio, Studio, Toronto, Canada, Ontario, GTA, Markham, Podcasts, Rock, Metal, Punk, Indie, Pop, Country, Folk, Hip Hop, Rap, Producer, Engineer, Mastering"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta charset="utf-8">
+      <meta http-equiv="x-ua-compatible" content="ie=edge">
+      <title>JLP Audio: Jon Lewis Productions</title>
+      <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services.">
+      <meta name="keywords" content="Audio, Editing, Recording, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, JLP Audio, Studio, Podcasts, Rock, Metal, Punk, Indie, Pop, Country, Folk, Hip Hop, Rap, Producer, Engineer, Mastering"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="p:domain_verify" content="319476384147f43b0224aab58461eade"/>
+      <link rel="apple-touch-icon" href="apple-touch-icon.png">
+      <link rel="shortcut icon" type="image/jpg" href="img/Logo/Social Media Logo Files/Favicon/Favicon Logo.png"/>
+      <!-- Place favicon.ico in the root directory -->
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        <link rel="shortcut icon" type="image/jpg" href="img/Logo/Social Media Logo Files/Favicon/Favicon Logo.png"/>
-
-        <link href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet"> <!--load all styles -->
-        <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-        <link href="dest/styles.min.css" rel="stylesheet" media="screen">
-      <script
-        src="https://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
-      <script src="semantic/dist/semantic.min.js"></script>
-        <script>
+      <link href="node_modules/@fontawesome/fontawesome-free/css/all.min.css" rel="stylesheet"> <!--load all styles -->
+      <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+      <link href="dest/styles.min.css" rel="stylesheet" media="screen">
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+    <script src="semantic/dist/semantic.min.js"></script>
+        <!-- <script>
           (adsbygoogle = window.adsbygoogle || []).push({
             google_ad_client: "ca-pub-8891819570588202",
             enable_page_level_ads: true
           });
-        </script>
+        </script> -->
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container">
+        <div class="main-content container">
             <div class="ui text menu">
                 <div class="header item">Menu</div>
                 <a class="active item" href="index.html">
@@ -42,18 +42,27 @@
                 <a class="item" href="portfolio.html">
                   Portfolio
                 </a>
+                <a class="item" href="mailto:jonlewisproductions@gmail.com">Contact</a>
               </div>
-            <div class="logo masthead">
+            <!-- <div class="logo masthead">
               <a href="index.html"><img src="img/Logo/Standard Logo Files/White on Transparent.png"/></a>
-          </div>
+          </div> -->
 
       <!-- Jumbotron -->
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span12 cta">
-          <a class="cta-link" href="projects.html"><h2>Portfolio</h2>
+        <div class="jumbotron">
+          <div class="banner-img"><img src="img/web-banner.jpg"></div>
+          
+        <div class="portfolio span12 cta">
+          <h2>Portfolio</h2>
             <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/466192080&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-       </div>
+        </div>
+        <div class="header-txt">
+          <h2>Audio Production Services</h2>
+          <p class="lead">Professional quality audio services. Recording, editing, mixing and mastering services available! Music, Podcasts, Spoken Word, Television & Film Music, Instrumental overdubs.</p>
+          <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for a quote</button>
+        </div>
       </div>
 
       <hr>
@@ -68,7 +77,7 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
+      <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -76,7 +85,7 @@
 
         gtag('config', 'UA-116055111-1');
       </script>
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
       
     </body>
 </html>
