--- a/index.html
+++ b/index.html
@@ -35,18 +35,11 @@
 
         <div class="main-content container">
           <div id="main-nav" class="ui text menu">
-              <div class="header item">Menu</div>
               <a class="active item" href="index.html">
                 Home
               </a>
-              <a class="item" href="web.html">
-                Web
-              </a>
               <a class="item" href="portfolio.html">
-                Audio
-              </a>
-              <a class="item" href="video.html">
-                Video
+                Portfolio
               </a>
               <a class="item" href="mailto:jonlewisproductions@gmail.com">Contact</a>
             </div>
@@ -58,14 +51,18 @@
       <div class="jumbotron">
         <div class="banner-img"><img src="img/web-banner.jpg"></div>
         <div class="header-txt">
-            <h2>Digital Services</h2>
-            <p class="lead">Professional quality web, audio and video services.</p>
+            <h2>Audio Production Services</h2>
+            <p class="lead">Professional quality audio services. Recording, editing, mixing and mastering services available! Music, Podcasts, Spoken Word, Television & Film Music, Instrumental overdubs.</p>
             <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for a quote</button>
         </div>
         <div class="overlay"></div>
       </div>
 
       <!-- Example row of columns -->
+
+      <div class="row-fluid">
+        <a href="https://soundbetter.com/profiles/62886-jon-lewis" target="_blank" title="Jon Lewis profile on SoundBetter" ><img alt="Jon Lewis, Mixing Engineer on SoundBetter" src="https://dkxd2qj9i8fak.cloudfront.net/assets/SoundBetterBadge-c84cb3e75c4267f5bee41f7f617a81d9.svg" style="max-width: 130px;" /></a>
+      </div>
 
       <div class="main-content">
         <div class="header-txt social">
