--- a/new/index.html
+++ b/new/index.html
@@ -3,66 +3,85 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Jon Lewis Productions</title>
-        <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services based in Toronto, Ontario, Canada.">
-        <meta name="keywords" content="Audio, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, Studio, Toronto"/>
+        <title>JLP Audio: Jon Lewis Productions</title>
+        <meta name="description" content="Jon Lewis Productions: Audio Recording, Mixing and Mastering services.">
+        <meta name="keywords" content="Audio, Editing, Recording, Mixing, Mastering, Production, Music, Jon Lewis, Jon Lewis Productions, JLP Audio, Studio, Podcasts, Rock, Metal, Punk, Indie, Pop, Country, Folk, Hip Hop, Rap, Producer, Engineer, Mastering"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="p:domain_verify" content="319476384147f43b0224aab58461eade"/>
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="shortcut icon" type="image/jpg" href="img/Logo/Social Media Logo Files/Favicon/Favicon Logo.png"/>
         <!-- Place favicon.ico in the root directory -->
 
-        <link href="dest/styles.min.css" rel="stylesheet" media="screen">
+        <link href="node_modules/@fontawesome/fontawesome-free/css/all.min.css" rel="stylesheet"> <!--load all styles -->
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+        <link href="dest/styles.min.css" rel="stylesheet" media="screen">
+      <script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+      <script src="semantic/dist/semantic.min.js"></script>
+        <!-- <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8891819570588202",
+            enable_page_level_ads: true
+          });
+        </script> -->
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container">
-
-          <div class="masthead">
-            <h3 class="muted">Jon Lewis Productions</h3>
-            <div class="navbar">
-              <div class="navbar-inner">
-                <div class="container">
-                  <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div><!-- /.navbar -->
-          </div>
+        <div class="main-content container">
+          <div id="main-nav" class="ui text menu">
+              <a class="active item" href="index.html">
+                Home
+              </a>
+              <a class="item" href="web.html">
+                Web
+              </a>
+              <a class="item" href="portfolio.html">
+                Audio
+              </a>
+              <a class="item" href="video.html">
+                Video
+              </a>
+              <a class="item" href="mailto:jonlewisproductions@gmail.com">Contact</a>
+            </div>
+          <!-- <div class="logo masthead">
+            <a href="index.html"><img src="img/Logo/Standard Logo Files/White on Transparent.png"/></a>
+        </div> -->
 
       <!-- Jumbotron -->
       <div class="jumbotron">
+        <div class="banner-img"><img src="img/web-banner.jpg"></div>
         <div class="header-txt">
-            <h1>Music Production, Mixing & Mastering</h1>            
-            <h2>Toronto, Ontario, Canada</h2>
-            <p class="lead">Let's bring your music to life with professional quality audio services. Tracking, editing, mixing and mastering services available!</p>
-            <a class="btn btn-large" href="mailto:jonlewisproductions@gmail.com">Contact for quotes</a>
+            <h2>Digital Services</h2>
+            <p class="lead">Professional quality web, audio and video services.</p>
+            <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for a quote</button>
         </div>
         <div class="overlay"></div>
-        <img src="img/cubase_home.jpg"/>
       </div>
 
-      <hr>
-
       <!-- Example row of columns -->
-      <div class="row-fluid">
-        <div class="span6 cta">
-          <a class="cta-link" href="projects.html"><h2>Portfolio</h2>
-          <p>Previous music production works.</p></a>
-       </div>
-        <div class="span6 cta">
-          <a class="cta-link" href="contact.html"><h2>Contact</h2>
-          <p>Contact for rates and more information.</p></a>
+
+      <div class="main-content">
+        <div class="header-txt social">
+          <ul>
+              <li><a href="https://www.facebook.com/JonLewisProductions/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="https://www.instagram.com/jonlewis1/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://twitter.com/jonlewis1" target="_blank"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="https://soundcloud.com/jonjlewis/" target="_blank"><i class="fab fa-soundcloud"></i></a></li>
+              <li><a href="mailto:jonlewisproductions@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+              <!-- <h2><a href="https://www.youtube.com/watch?v=PuYPOC-gCGA" target="_blank">Phone: 1-647-946-7230</a></h2> -->
+          </ul>
+            
         </div>
       </div>
 
       <hr>
+      <!-- <iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ez&f=ifr&linkID=e8a873cf1925965342de88dcf222afd3&t=jlproductio0a-20&tracking_id=jlproductio0a-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe> -->
 
       <div class="footer">
         <p>&copy; Jon Lewis Productions <script>document.write(new Date().getFullYear())</script></p>
@@ -74,7 +93,7 @@
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
+      <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -82,5 +101,9 @@
 
         gtag('config', 'UA-116055111-1');
       </script>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+      <!-- Start of HubSpot Embed Code -->
+      <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8042853.js"></script> -->
+      <!-- End of HubSpot Embed Code -->
     </body>
 </html>
