--- a/portfolio.html
+++ b/portfolio.html
@@ -42,12 +42,11 @@
         <![endif]-->
 
         <div class="main-content container">
-            <div class="ui text menu">
-                <div class="header item">Menu</div>
-                <a class="active item" href="index.html">
+            <div id="main-nav" class="ui text menu">
+                <a class="item" href="index.html">
                   Home
                 </a>
-                <a class="item" href="portfolio.html">
+                <a class="active item" href="portfolio.html">
                   Portfolio
                 </a>
                 <a class="item" href="mailto:jonlewisproductions@gmail.com">Contact</a>
@@ -106,7 +105,7 @@
                     
                            <li class="awp-playlist-item" data-type="audio" data-mp3="media/portfolio-tracks/Dichotomies 191226.mp3" data-artist="Friday Nights" data-title="Dichotomies" data-thumb="media/audio/2/speed-mixing.png"></li>
                     
-                           <li class="awp-playlist-item" data-type="audio" data-mp3="media/portfolio-tracks/I Wish I Hated You 180214.mp3" data-artist="Chubz" data-title="I Wish I Hated You" data-thumb="media/audio/2/chubz.jpg"></li>
+                           <li class="awp-playlist-item" data-type="audio" data-mp3="media/portfolio-tracks/I Wish I Hated You 201023.mp3" data-artist="Chubz" data-title="I Wish I Hated You" data-thumb="media/audio/2/chubz.jpg"></li>
 
                            <li class="awp-playlist-item" data-type="audio" data-mp3="media/portfolio-tracks/I've Been Thinking About You 171211.mp3" data-artist="JSavvy & Super Electric" data-title="About You" data-thumb="media/audio/2/javvy.jpg"></li>
 
