--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,6 @@
 
         <div class="container">
           <div class="ui text menu">
-              <div class="header item">Menu</div>
               <a class="active item" href="contact.html">
                 Contact
               </a>
@@ -51,7 +50,7 @@
       <div class="jumbotron">
         <div class="header-txt">
             <h2>Audio Production Services :: Toronto, Ontario, Canada</h2>
-            <p class="lead">Professional quality audio services. Recording, editing, mixing and mastering services available!</p>
+            <p class="lead">Professional quality audio services. Mixing and mastering services available!</p>
             <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for quotes</button>
         </div>
         <div class="overlay"></div>
