--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </script> -->
     </head>
     <body>
-        <!--[if lt IE 8]>
+        <!--[if lt IE 11]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
@@ -52,7 +52,7 @@
         <div class="banner-img"><img src="img/web-banner.jpg"></div>
         <div class="header-txt">
             <h2>Audio Production Services</h2>
-            <p class="lead">Professional quality audio services. Recording, editing, mixing and mastering services available! Music, Podcasts, Spoken Word, Television & Film Music, Instrumental overdubs.</p>
+            <p class="lead">Professional quality audio services. Mixing and mastering services available!</p>
             <button class="ui primary basic button" href="mailto:jonlewisproductions@gmail.com">Contact for a quote</button>
         </div>
         <div class="overlay"></div>
@@ -90,8 +90,9 @@
         <script type="text/javascript" src="dest/bundle.js" charset="utf-8"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-      <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116055111-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -99,7 +100,7 @@
 
         gtag('config', 'UA-116055111-1');
       </script>
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+      <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> --> -->
       <!-- Start of HubSpot Embed Code -->
       <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8042853.js"></script> -->
       <!-- End of HubSpot Embed Code -->
